src/objects/Zip_Codes__c.object
<CustomObject>
    <description>PMC</description>
    <fields>
        <fullName>County__c</fullName>
        <description>County</description>
        <inlineHelpText>County</inlineHelpText>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionID__c</fullName>
        <formula>Route_To_Region__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RegionID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_State__c</fullName>
        <formula>TEXT(Route_To_Region__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_ARY_Next__c</fullName>
        <formula>Route_To_Region__r.Route_To_ARY_Next__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route To ARY Next</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_IDD_Next__c</fullName>
        <formula>Route_To_Region__r.Route_To_IDD_Next__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route To IDD Next</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_ID__c</fullName>
        <formula>Route_To_Region__r.Route_To__c</formula>
        <label>Route To ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_Region_IDD_Next__c</fullName>
        <formula>Route_To_Region_IDD__r.Route_To_IDD_Next__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route To Region IDD Next</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_Region_IDD_RegionID__c</fullName>
        <formula>Route_To_Region_IDD__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Split  - IDD Region ID</inlineHelpText>
        <label>Route To Region IDD RegionID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_Region_IDD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IDD Route To Region</description>
        <inlineHelpText>IDD Route To Region</inlineHelpText>
        <label>Route To Region IDD</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Zip Codes (Route To Region IDD)</relationshipLabel>
        <relationshipName>Zip_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Route To Region</description>
        <inlineHelpText>Route To Region</inlineHelpText>
        <label>Route To Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Zip Codes</relationshipLabel>
        <relationshipName>Zip_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_To_Undecided_Next__c</fullName>
        <formula>Route_To_Region__r.Route_To_Undecided_Next__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route To Undecided Next</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To_Undecided_Split__c</fullName>
        <formula>IF (ISNULL(Route_To_Region__r.Last_Undecided_Date__c),&apos;ARY&apos;,
IF(ISNULL(Route_To_Region_IDD__r.Last_Undecided_Date__c),&apos;IDD&apos;,
IF(Route_To_Region__r.Last_Undecided_Date__c  &lt; Route_To_Region_IDD__r.Last_Undecided_Date__c ,&apos;ARY&apos;,&apos;IDD&apos;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route To Undecided Split Next</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_State__c</fullName>
        <description>1=This is a Split Region;   0 = This is not a Split Region</description>
        <formula>IF(AND (NOT ISBLANK(RegionID__c), NOT ISBLANK(Route_To_Region_IDD_RegionID__c) ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1=This is a Split Region;   0 = This is not a Split Region</inlineHelpText>
        <label>Split State</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <inlineHelpText>State</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Zip Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>County__c</columns>
        <columns>Route_To_Region__c</columns>
        <columns>State__c</columns>
        <columns>Region_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Zip</fullName>
        <active>true</active>
        <description>Zip</description>
        <errorConditionFormula>OR(
 len( Name ) &lt;&gt;5,
 not(isnumber(Name))
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Zip Code must be 5 numbers, include leading &apos;0&apos; when necessary</errorMessage>
    </validationRules>
</CustomObject>